force-app/main/notification/objects/Notification__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>