force-app/main/notification/objects/Notification__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Read?</label>
    <type>Checkbox</type>
</CustomField>