force-app/main/notification/objects/Notification__c/fields/Notified_User__c.field-meta.xml
<CustomField>
    <fullName>Notified_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notified User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>