force-app/main/notification/objects/Notification__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>